@@ -10,6 +10,7 @@
 ;;; multiple times.
 
 (define-module (scsh procobj)
+  :use-module (ice-9 receive)
   :use-module (scsh defrec)
   :use-module (scsh population)
   :use-module (scsh utilities)
