@@ -32,7 +32,7 @@
 ;;; of its expansion process.
 
 (define-module (scsh rx simp)
-  :use-module (scsh receive)
+  :use-module (ice-9 receive)
   :use-module (scsh rx re)
   :use-module (scsh rx cond-package)
   :use-module (scsh char-set)
